--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
   </head>
   <body>
-    <h1>Quem canta os males espanta</h1>
-    <h2>Quem canta os males espanta</h2>
-    <h3>Quem canta os males espanta</h3>
+    <div class="flex gap-1">
+      <button class="btn btn-sm">label</button>
+      <button aria-label="label" class="btn btn-md"></button>
+    </div>
   </body>
 </html>
