add menu component and social links

--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
   </head>
   <body>
     <div class="flex gap-1">
-      <button class="btn btn-sm">label</button>
-      <button aria-label="label" class="btn btn-md"></button>
+      <a href="#" class="social" aria-label="tiktok"></a>
+      <a href="#" class="social" aria-label="instagram"></a>
+      <a href="#" class="social" aria-label="twitter"></a>
+      <a href="#" class="social" aria-label="discord"></a>
     </div>
   </body>
 </html>
