--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Zingen - Karaokê</title>
+    <link rel="shortcut icon" href="./assets/icons/MicrophoneStage.svg" type="image/svg+xml">
     <link rel="stylesheet" href="./styles/index.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
   </head>
@@ -166,6 +167,32 @@
 
             <small>Mínimo de 4 pessoas no plano família.</small>
           </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="download">
+      <div class="container py-xl">
+        <div class="card px-lg even-columns items-center">
+          <div>
+            <header>
+              <strong>Download</strong>
+              <h2>Bora cantar?</h2>
+            </header>
+            <p>Desperte seu potencial de estrela, liberte sua voz e faça parte da comunidade musical mais envolvente. Baixe o Zingen agora e transforme suas performances em experiências inesquecíveis!</p>
+
+            <div class="buttons flex gap-1">
+              <a href="#">
+                <img src="./assets/icons/button-apple-store.svg" alt="Baixar da Apple Store">
+              </a>
+
+              <a href="#">
+                <img src="./assets/icons/button-play-store.svg" alt="Baixar da Play Store">
+              </a>
+            </div>
+          </div>
+
+          <img src="./assets/rapaz-ouvindo-musica-com-fones-de-ouvido-e-cantando-no-aplicativo-de-karaoke-removebg 1.png" alt="">
         </div>
       </div>
     </section>
